# APP-INTERNET-NFTP

./: README.md  Source.txt  tcpip.c
NFTP-1.72/: Makefile  auxprogs.c  befs.c  bookmark.c  display.c  do_key.c  getoptns.c  history.c  history.h  init.c  keys.h  license.c  licensing.c  licensing.h  local.h  mirror.c  net.c  network.h  nftp-wpi.cmd  nftp.bmk  nftp.h  nftp.i  nftp.ini  nftp.wis  nls.c  nls.cns  nls.h  nls2.cmd  parsers.c  passwords.c  passwords.h  scripting.c  search.c  sign.c  tcpip.c  tcpip.h  transfer.c  types1.h
NFTP-1.8/: LICENSE  Makefile  auxprogs.c  auxprogs.h  befs.c  bookmark.c  dircache.h  display.c  do_key.c  getopt.h  getoptns.c  help.c  help.h  history.c  init.c  keys.h  mirror.c  mirror.h  net.c  net.h  nftp.c  nftp.cfg  nftp.h  nftp.hst  nftp.i  nftp.ini  nftp.mnu  parsers.c  passwords.c  scripting.c  scripting.h  tcpip.c  transfer.c  types1.h
NFTP-2.0/: Makefile  auxprogs.c  auxprogs.h  befs.c  befs.h  bookmark.c  display.c  do_key.c  do_key.h  functions  getopt.c  getoptns.c  help.c  history.c  init.c  keys.h  languages.h  local.h  mirror.c  mirror.h  net.c  net.h  nftp.bmk  nftp.c  nftp.cfg  nftp.h  nftp.i  nftp.ini  nftppm.def  nftppm.rc  nftpwc.rc  nls.c  parsers.c  passwords.c  passwords.h  regcode.c  search.c  search.h  sha1.c  sign.c  (+5 more)
libftpsearch/: Makefile  Setup.pm  ardp.c  fsearch.c  (+9 more)
libmanycode-1.0.0/: AUTHORS  Makefile.am  Makefile.in  Makefile.os2  bootstrap.sh  configure  configure.in
libmanycode-1.0.0/src/: Makefile.am  Makefile.in  Makefile.os2  charsets.c  charsets.h  config.h.in  koi8_ctype.c  manycode.h  mktab.c  ru_tables.c  ruscode.c  trigrams.kov  ucm2ic.c  ucm_parse.c  ucs.c  ucs_tables.c  ucs_tables.h  unicode.tab  utf8.c
libmanycode-1.0.0/src/ic/: ibm-1250.ic  ibm-1251.ic  ibm-1252.ic  ibm-1253.ic  ibm-1254.ic  ibm-1255.ic  ibm-1256.ic  ibm-1257.ic  ibm-1275.ic  ibm-1280.ic  ibm-1282.ic  ibm-1283.ic  ibm-437.ic  ibm-813.ic  ibm-850.ic  ibm-852.ic  ibm-855.ic  ibm-857.ic  ibm-860.ic  ibm-861.ic  ibm-862.ic  ibm-863.ic  ibm-864.ic  ibm-865.ic  ibm-866.ic  ibm-869.ic  ibm-878.ic  ibm-912.ic  ibm-913.ic  ibm-914.ic  ibm-915.ic  ibm-916.ic  ibm-920.ic
libmanycode-1.0.0/src/ic/CVS/: Entries  Repository  Root  Tag
libmanycode-1.0.0/tests/: Makefile.am  Makefile.in  Makefile.os2  alphabet.c  ruscode.c  trigrams.c
(+158 files in other folders)
